<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2" >

    <TextView
        android:id="@+id/fragment_mainstats_qualities_display_infoname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/Quality_Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/fragment_mainstats_qualities_display_cost_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end|top"
        android:layout_row="0" >

        <RadioGroup
            android:id="@+id/fragment_mainstats_qualities_display_radiocostgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fragment_mainstats_qualities_display_infocost_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Karma_Cost"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_mainstats_qualities_display_info_extrabuttons"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/fragment_mainstats_qualities_display_info_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:text="@string/Quality_Summary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end|bottom"
        android:layout_row="3" >

        <TextView
            android:id="@+id/fragment_mainstats_qualities_display_infobook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quality_Info_Book"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:id="@+id/fragment_mainstats_qualities_display_infopage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quality_Info_Page" />
    </LinearLayout>

</GridLayout>