<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/MetaTypeTextViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/metatype"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/NewCharacterButtonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/buttonDone" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MetaTypeTextViewLogo"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        >

        <GridLayout
            android:id="@+id/MetaTypeGridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/MetaTypePriorityA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_row="0"
                android:text="@string/priorityA" />

            <RadioGroup
                android:id="@+id/MetaTypeRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/AttributeRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/MagicRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/SkillRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/ResourceRadioGroupA"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/MetaTypePriorityB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="1"
                android:text="@string/priorityB" />

            <RadioGroup
                android:id="@+id/MetaTypeRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/AttributeRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/MagicRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/SkillRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/ResourceRadioGroupB"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/MetaTypePriorityC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="2"
                android:text="@string/priorityC" />

            <RadioGroup
                android:id="@+id/MetaTypeRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/AttributeRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/MagicRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/SkillRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/ResourceRadioGroupC"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/MetaTypePriorityD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="3"
                android:text="@string/priorityD" />

            <RadioGroup
                android:id="@+id/MetaTypeRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/AttributeRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/MagicRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/SkillRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/ResourceRadioGroupD"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/MetaTypePriorityE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="4"
                android:text="@string/priorityE" />

            <RadioGroup
                android:id="@+id/MetaTypeRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/AttributeRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/MagicRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/SkillRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/ResourceRadioGroupE"
                android:layout_gravity="start"/>
        </GridLayout>

    </ScrollView>

</RelativeLayout>