<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/activity_priority_table_MetaType_txtView_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/metatype"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/activity_priority_table_NewCharacter_Button_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/buttonDone" />

    <ScrollView
        android:id="@+id/activity_priority_table_scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_priority_table_MetaType_txtView_Logo"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        >

        <GridLayout
            android:id="@+id/activity_priority_table_MetaTypeGridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_priority_table_MetaTypePriorityA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_row="0"
                android:text="@string/priorityA" />

            <RadioGroup
                android:id="@+id/activity_priority_table_MetaTypeRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_AttributeRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_MagicRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_SkillRadioGroupA"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_ResourceRadioGroupA"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/activity_priority_table_MetaTypePriorityB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="1"
                android:text="@string/priorityB" />

            <RadioGroup
                android:id="@+id/activity_priority_table_MetaTypeRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_AttributeRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_MagicRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_SkillRadioGroupB"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_ResourceRadioGroupB"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/activity_priority_table_MetaTypePriorityC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="2"
                android:text="@string/priorityC" />

            <RadioGroup
                android:id="@+id/activity_priority_table_MetaTypeRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_AttributeRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_MagicRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_SkillRadioGroupC"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_ResourceRadioGroupC"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/activity_priority_table_MetaTypePriorityD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="3"
                android:text="@string/priorityD" />

            <RadioGroup
                android:id="@+id/activity_priority_table_MetaTypeRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_AttributeRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_MagicRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_SkillRadioGroupD"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_ResourceRadioGroupD"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/activity_priority_table_MetaTypePriorityE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_row="4"
                android:text="@string/priorityE" />

            <RadioGroup
                android:id="@+id/activity_priority_table_MetaTypeRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_AttributeRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_MagicRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_SkillRadioGroupE"
                android:layout_gravity="start"/>

            <RadioGroup
                android:id="@+id/activity_priority_table_ResourceRadioGroupE"
                android:layout_gravity="start"/>
        </GridLayout>

    </ScrollView>

</RelativeLayout>